[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/scenes/item.gd" type="Script" id=1]
[ext_resource path="res://ui/textures/items/iron_sword.png" type="Texture" id=2]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://efx/rotate_continuous.gd" type="Script" id=4]
[ext_resource path="res://efx/resources/spotlight_8.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.972549 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="InventoryItem" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="VFX" type="Sprite" parent="."]
visible = false
modulate = Color( 0.054902, 1, 0, 1 )
material = SubResource( 2 )
position = Vector2( 9, 9 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="."]
margin_left = 11.0
margin_top = 9.0
margin_right = 27.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Tooltip" type="PanelContainer" parent="."]
visible = false
margin_left = 11.0
margin_top = -76.0
margin_right = 88.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip"]
margin_right = 77.0
margin_bottom = 153.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip/VBoxContainer"]
margin_right = 77.0
margin_bottom = 132.0

[node name="ItemName" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0.968627, 0.803922, 1 )
custom_fonts/font = SubResource( 4 )
text = "Skill name "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDesc" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 77.0
margin_bottom = 30.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "This is a skill"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLvl" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 77.0
margin_bottom = 47.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Level: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemRarity" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 77.0
margin_bottom = 47.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Rarity: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDurability" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 77.0
margin_bottom = 47.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Rarity: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemReforgeTime" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 77.0
margin_bottom = 64.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Reforged: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAtkRange" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 77.0
margin_bottom = 81.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Mana cost: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAtkSpeed" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 77.0
margin_bottom = 98.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Mana cost: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPDmg" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 77.0
margin_bottom = 115.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Mana cost: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemMDmg" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 77.0
margin_bottom = 132.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Mana cost: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCEnergy" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 77.0
margin_bottom = 132.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "C. Energy: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemStatsBox" type="VBoxContainer" parent="Tooltip/VBoxContainer"]
margin_top = 136.0
margin_right = 77.0
margin_bottom = 136.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Tooltip/VBoxContainer"]
margin_top = 140.0
margin_right = 77.0
margin_bottom = 153.0

[node name="ItemLvlRequire" type="Label" parent="Tooltip/VBoxContainer/VBoxContainer2"]
margin_right = 77.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Lvl Require: 12"
__meta__ = {
"_edit_use_anchors_": false
}
